Add greeting service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,4 @@
 play.allowGlobalApplication=false
 
-play.application.loader = com.tersesystems.demo.DemoApplicationLoader
+play.application.loader = com.tersesystems.demo.MyApplicationLoader
 
