Update ocaps demo

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,3 +2,16 @@ play.allowGlobalApplication=false
 
 play.application.loader = com.tersesystems.demo.MyApplicationLoader
 
+//akka {
+//  loglevel = "DEBUG"
+//  actor {
+//    debug {
+//      # enable function of LoggingReceive, which is to log any received message at
+//      # DEBUG level
+//      receive = on
+//      lifecycle = on
+//      unhandled = on
+//      event-stream = on
+//    }
+//  }
+//}
