Clean up repository

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,8 @@ play.allowGlobalApplication=false
 
 play.application.loader = com.tersesystems.demo.MyApplicationLoader
 
+play.i18n.langs = [ "en", "fr" ]
+
 //akka {
 //  loglevel = "DEBUG"
 //  actor {
