Add revoke after 5 seconds

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,16 +4,16 @@ play.application.loader = com.tersesystems.demo.MyApplicationLoader
 
 play.i18n.langs = [ "en", "fr" ]
 
-//akka {
-//  loglevel = "DEBUG"
-//  actor {
-//    debug {
-//      # enable function of LoggingReceive, which is to log any received message at
-//      # DEBUG level
-//      receive = on
-//      lifecycle = on
-//      unhandled = on
-//      event-stream = on
-//    }
-//  }
-//}
+akka {
+  loglevel = "DEBUG"
+  actor {
+    debug {
+      # enable function of LoggingReceive, which is to log any received message at
+      # DEBUG level
+      receive = on
+      lifecycle = on
+      unhandled = on
+      event-stream = on
+    }
+  }
+}
